<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="change_language_settings">Change Language</string>
    <string name="favorite">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film">A Star is Born</string>
    <string name="desc">A musician helps a young singer find fame, even as age and alcoholism send his own career into a downward spiral</string>
    <string name="error">Error get data</string>
    <string name="overview">Overview</string>
    <string name="tagline">Tagline</string>
    <string name="popularity">Popularity</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="first_air_date">First Air Date</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="number_of_episode">Number of Episode</string>
    <string name="seasons">Season</string>
    <string name="search_label">Search by Name</string>
    <string name="search">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty">NO DATA</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="settings">Settings</string>
    <string name="title_favoriteapp">Module Title</string>
    <string name="title_daily_notif">Catalogue Movie</string>
    <string name="message_daily_notif">Catalogue Movie missing you!</string>
    <string name="message_release_today">has been released today!</string>

</resources>
